<resources>
    <string name="app_name">VirtualJaguar</string>
    <string name="config_not_saved">Error, config not saved</string>
    <string name="config_saved">config saved</string>
    <string name="config_not_found">config not found</string>
    <string name="config_loaded">config loaded</string>
    <string name="download_disk_images">Download disk images</string>
    <string name="select">select</string>
    <string name="none">none</string>
    <string name="rom_selection">ROM selection:</string>
    <string name="please_select_rom_image">Please select ROM image</string>
    <string name="glFilterType">glFilterType:</string>
    <string name="sharp">sharp</string>
    <string name="blurry">blurry</string>
    <string name="enableDsp">enable DSP</string>
    <string name="usePipelinedDSP">use PipelinedDSP</string>
    <string name="useFastBlitter">use FastBlitter</string>
    <string name="app_id">ca-app-pub-4572241703388342~6632888747</string>
    <string name="banner_ad_unit_id">ca-app-pub-4572241703388342/4792305411</string>
    <string name="page_ad_unit_id">ca-app-pub-4572241703388342/8608508913</string>
</resources>
